--- a/.github/workflows/agent-provisioning.yml
+++ b/.github/workflows/agent-provisioning.yml
@@ -9,11 +9,14 @@ on:
 
 jobs:
   build-and-push:
+    name: Push Docker image to GitHub
     runs-on: ubuntu-latest
 
     permissions:
       contents: read
       packages: write
+      attestations: write
+      id-token: write
 
     steps:
       - name: Checkout Repository
