updated to yml file
Signed-off-by: sahil.kamble@ayanworks.com <sahil.kamble@ayanworks.com>

--- a/.github/workflows/agent-provisioning.yml
+++ b/.github/workflows/agent-provisioning.yml
@@ -36,5 +36,6 @@ jobs:
           echo "Building Docker image for agent-provisioning ..."
           docker build -t $IMAGE_NAME -f Dockerfiles/Dockerfile.agent-provisioning .
 
+          echo $IMAGE_NAME
           echo "Pushing Docker image to GitHub Container Registry..."
           docker push $IMAGE_NAME
