updated to yml file
Signed-off-by: sahil.kamble@ayanworks.com <sahil.kamble@ayanworks.com>

--- a/.github/workflows/agent-provisioning.yml
+++ b/.github/workflows/agent-provisioning.yml
@@ -8,7 +8,7 @@ on:
       - 'apps/agent-provisioning/**'
 
 env:
-  SERVICE: AGENT-PROVISIONING
+  SERVICE: agent-provisioning
 
 jobs:
   build-and-push:
