--- a/.github/workflows/agent-provisioning.yml
+++ b/.github/workflows/agent-provisioning.yml
@@ -34,10 +34,10 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          IMAGE_NAME=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          IMAGE_NAME=ghcr.io/$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')//$SERVICE:latest
 
           echo "Building Docker image for agent-provisioning ..."
-          docker build -t ghcr.io/$IMAGE_NAME/$SERVICE:latest -f Dockerfiles/Dockerfile.agent-provisioning .
+          docker build -t $IMAGE_NAME -f Dockerfiles/Dockerfile.agent-provisioning .
 
           echo $IMAGE_NAME
           echo "Pushing Docker image to GitHub Container Registry..."
