updated to yml file
Signed-off-by: sahil.kamble@ayanworks.com <sahil.kamble@ayanworks.com>

--- a/.github/workflows/agent-provisioning.yml
+++ b/.github/workflows/agent-provisioning.yml
@@ -1,11 +1,16 @@
 name: Agent-Provisioning
 
+# on:
+#   push:
+#     branches:
+#       - main
+#     paths:
+#       - 'apps/agent-provisioning/**'
+
 on:
   push:
-    branches:
-      - main
-    paths:
-      - 'apps/agent-provisioning/**'
+    tags:
+      - 'v*'
 
 env:
   SERVICE: agent-provisioning
