added matrix to yml files
Signed-off-by: sahil.kamble@ayanworks.com <sahil.kamble@ayanworks.com>

--- a/.github/workflows/agent-provisioning.yml
+++ b/.github/workflows/agent-provisioning.yml
@@ -61,13 +61,13 @@ jobs:
       - name: Build and Push Docker Image ${matrix.service}
         run: |
           REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          SERVICE_NAME="${{ env.SERVICE }}"
+          SERVICE_NAME="${matrix.service}"
           IMAGE_TAG="${{ env.TAG }}"
 
           IMAGE_NAME="ghcr.io/${REPO_OWNER}/${SERVICE_NAME}:${IMAGE_TAG}"
           IMAGE_LATEST="ghcr.io/${REPO_OWNER}/${SERVICE_NAME}:latest"
 
-          echo "Building Docker image for agent-provisioning ..."
+          echo "Building Docker image for ${matrix.service} ..."
           docker build -t $IMAGE_NAME -f Dockerfiles/Dockerfile.${matrix.service} .
 
           docker tag "${IMAGE_NAME}" "${IMAGE_LATEST}"
