--- a/Dockerfiles/Dockerfile.ledger
+++ b/Dockerfiles/Dockerfile.ledger
@@ -18,7 +18,7 @@ RUN pnpm i --ignore-scripts
 # Copy the rest of the application code
 COPY . .
 # RUN cd libs/prisma-service && npx prisma migrate deploy && npx prisma generate
-RUN cd libs/prisma-service && npx prisma migrate deploy && npx prisma generate
+RUN cd libs/prisma-service && npx prisma generate
 
 # Build the ledger service
 RUN npm run build ledger
@@ -41,4 +41,4 @@ COPY --from=build /app/libs/ ./libs/
 COPY --from=build /app/node_modules  ./node_modules
 
 # Set the command to run the microservice
-CMD ["sh", "-c", "cd libs/prisma-service && npx prisma migrate deploy && cd ../.. && node dist/apps/ledger/main.js"]
+CMD ["sh", "-c", "cd libs/prisma-service && npx prisma migrate deploy && npx prisma generate && cd ../.. && node dist/apps/ledger/main.js"]
